--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -195,7 +195,7 @@
   left: -10px;
   display: flex;
   justify-content: center;
-  align-items: center;
+  padding-top: 14px;
   height: 100%;
 }
 .columnDrag {
