--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -38,6 +38,7 @@
   box-sizing: border-box;
   min-width: 200px;
   position: relative;
+  max-width: 200px;
 }
 .content-table-wrapper {
   padding: 10px;
@@ -247,7 +248,4 @@
   max-height: 350px;
   -ms-scroll-chaining: none;
   -ms-scroll-limit: none;
-}
-td {
-  border: 1px solid rgb(180, 177, 177);
 }
