--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -39,6 +39,19 @@
   min-width: 200px;
   position: relative;
   max-width: 200px;
+  .merge-option {
+    position: absolute;
+    top: 0px;
+    left: 6px;
+    font-size: 18px;
+    cursor: pointer;
+    display: none;
+  }
+  &:hover {
+    .merge-option {
+      display: block;
+    }
+  }
 }
 .content-table-wrapper {
   padding: 10px;
