--- a/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
+++ b/src/features/Container/Protocols/CustomComponents/PDTable/Components/table.scss
@@ -46,6 +46,7 @@
     font-size: 18px;
     cursor: pointer;
     display: none;
+    padding-bottom: 4px;
   }
   &:hover {
     .merge-option {
@@ -89,7 +90,8 @@
   color: #000;
   min-height: 35px;
   display: flex;
-  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 .editable-span {
   width: 50%;
