--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -326,6 +326,13 @@
   tr > th:first-child {
     text-align: left;
   }
+  td {
+    select {
+      width: 90%;
+      margin: 12px auto;
+      padding: 6px;
+    }
+  }
 }
 .assessment-table-container {
   padding: 12px;
@@ -341,4 +348,13 @@
       vertical-align: text-bottom;
     }
   }
+}
+.full-view-modal {
+  max-width: 100% !important;
+  max-height: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.assessment-dropdown {
+  padding: 8px;
 }
