--- a/src/features/Container/Protocols/MetaData/MetaData.scss
+++ b/src/features/Container/Protocols/MetaData/MetaData.scss
@@ -358,3 +358,59 @@
 .assessment-dropdown {
   padding: 8px;
 }
+.asssessment-content {
+  .column-settings-icon {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 12px;
+    margin-bottom: -7px;
+    margin-top: 10px;
+  }
+  .column-settings {
+    position: absolute;
+    z-index: 20;
+    background-color: #fff;
+    padding: 10px;
+    box-shadow: 0 8px 20px 0 rgba(0, 0, 0, 0.08);
+    right: 40px;
+  }
+  .dropdown-plus {
+    display: flex;
+    justify-content: space-between;
+
+    .assessment-select {
+      min-width: 150px;
+      margin-left: 12px;
+      svg {
+        height: 1rem;
+        width: 1rem;
+        font-size: 1.5rem;
+      }
+    }
+    .plus-containter {
+      margin-top: 25px;
+      height: 26px;
+      width: 26px;
+      background-color: #333;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      span {
+        height: 20px;
+        svg {
+          height: 1rem;
+          width: 1rem;
+          color: #fff;
+        }
+      }
+    }
+  }
+  .modal-icons {
+    display: flex;
+    justify-content: flex-end;
+    svg {
+      cursor: pointer;
+    }
+  }
+}
